[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/spitfrog-sheet.png" type="Texture" id=1]
[ext_resource path="res://Spitfrog.gd" type="Script" id=2]
[ext_resource path="res://Sprites/spitfrogTounge.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 0.1
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 7 ) ],
"loop": false,
"name": "Spit",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ null, SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), null ],
"loop": false,
"name": "Spit",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 12.5, 9.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 62.5, 2.5 )

[node name="Spitfrog" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Spit"
frame = 4
playing = true

[node name="tongueSprite" type="AnimatedSprite" parent="."]
position = Vector2( -74, 3 )
frames = SubResource( 13 )
animation = "Spit"
frame = 3

[node name="SpitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TongueTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 3.8147e-06, 3.8147e-06 )
scale = Vector2( 6.2, 5.6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 0.5 )
shape = SubResource( 14 )

[node name="hurtArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtArea"]
position = Vector2( -74.5, 2.5 )
shape = SubResource( 15 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="tongueSprite" to="." method="_on_tongueSprite_animation_finished"]
[connection signal="timeout" from="SpitTimer" to="." method="_on_SpitTimer_timeout"]
[connection signal="timeout" from="TongueTimer" to="." method="_on_TongueTimer_timeout"]
[connection signal="body_entered" from="hurtArea" to="." method="_on_hurtArea_body_entered"]
